pytest_output.txt
============================= test session starts =============================
platform win32 -- Python 3.13.12, pytest-8.4.1, pluggy-1.6.0
rootdir: C:\Users\dtheurer\GitHub\gp-proxy
configfile: pyproject.toml
testpaths: tests
plugins: asyncio-1.0.0, cov-6.2.1, mock-3.14.1
asyncio: mode=Mode.STRICT, asyncio_default_fixture_loop_scope=None, asyncio_default_test_loop_scope=function
collected 41 items / 3 errors

=================================== ERRORS ====================================
_______________ ERROR collecting tests/test_control_listener.py _______________
..\..\AppData\Roaming\Python\Python313\site-packages\_pytest\python.py:498: in importtestmodule
    mod = import_path(
..\..\AppData\Roaming\Python\Python313\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Python313\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
..\..\AppData\Roaming\Python\Python313\site-packages\_pytest\assertion\rewrite.py:177: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
..\..\AppData\Roaming\Python\Python313\site-packages\_pytest\assertion\rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Python313\Lib\ast.py:50: in parse
    return compile(source, filename, mode, flags,
E     File "C:\Users\dtheurer\GitHub\gp-proxy\tests\test_control_listener.py", line 290
E       except SystemExit, KeyboardInterrupt:
E              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
E   SyntaxError: multiple exception types must be parenthesized
____________________ ERROR collecting tests/test_server.py ____________________
ImportError while importing test module 'C:\Users\dtheurer\GitHub\gp-proxy\tests\test_server.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
C:\Python313\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
tests\test_server.py:25: in <module>
    import server
backend\server.py:31: in <module>
    from cryptography.exceptions import InvalidSignature  # pyright: ignore[reportUnknownVariableType]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
E   ModuleNotFoundError: No module named 'cryptography'
__________________ ERROR collecting tests/test_server_api.py __________________
ImportError while importing test module 'C:\Users\dtheurer\GitHub\gp-proxy\tests\test_server_api.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
C:\Python313\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
tests\test_server_api.py:20: in <module>
    import server
backend\server.py:31: in <module>
    from cryptography.exceptions import InvalidSignature  # pyright: ignore[reportUnknownVariableType]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
E   ModuleNotFoundError: No module named 'cryptography'
=========================== short test summary info ===========================
ERROR tests/test_control_listener.py
ERROR tests/test_server.py
ERROR tests/test_server_api.py
!!!!!!!!!!!!!!!!!!! Interrupted: 3 errors during collection !!!!!!!!!!!!!!!!!!!
============================== 3 errors in 0.28s ==============================
